airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_5/attempt=2.log
[2026-06-03T13:02:47.555+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:02:47.584+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:47.595+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:47.596+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2026-06-03T13:02:47.614+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_5> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T13:02:47.621+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_5', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '144', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmprfaj5ci5']
[2026-06-03T13:02:47.624+0000] {standard_task_runner.py:91} INFO - Job 144: Subtask run_pipeline_5
[2026-06-03T13:02:47.624+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2288) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:02:47.625+0000] {standard_task_runner.py:63} INFO - Started process 2289 to run task
[2026-06-03T13:02:47.668+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_5 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:02:47.742+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_5' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T13:02:47.743+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:02:47.758+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:02:47.760+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 5']
[2026-06-03T13:02:47.769+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:03:11.259+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.262+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:03:11.265+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:03:11.268+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:03:11.269+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:03:11.271+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:03:11.272+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:03:11.274+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:03:11.275+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:03:11.276+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:03:11.277+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.278+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:03:11.279+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.280+0000] {subprocess.py:93} INFO - Running pipeline: s3_to_postgres_pipeline (storage_to_db)
[2026-06-03T13:03:11.281+0000] {subprocess.py:93} INFO - Loading table: customer_feb (120 rows)
[2026-06-03T13:03:11.282+0000] {subprocess.py:93} INFO - Loading table: customer_jan (100 rows)
[2026-06-03T13:03:11.283+0000] {subprocess.py:93} INFO - Loading table: customer_march (150 rows)
[2026-06-03T13:03:11.284+0000] {subprocess.py:93} INFO - Processed total rows: 370
[2026-06-03T13:03:11.285+0000] {subprocess.py:93} INFO - Completed: 370 rows processed
[2026-06-03T13:03:11.286+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:03:11.287+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T13:03:11.288+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:03:11.289+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:03:11.290+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:03:11.291+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:03:11.292+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:03:11.292+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:03:11.293+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.293+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.294+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:03:11.294+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.295+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:03:11.295+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T13:03:11.296+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:03:11.296+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T13:03:11.297+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:03:11.297+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:03:11.297+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:03:11.298+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:03:11.298+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:03:11.298+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:03:11.299+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:03:11.513+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:03:11.515+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:03:11.526+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:03:11.530+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_5, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T130247, end_date=20260603T130311
[2026-06-03T13:03:11.543+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 144 for task run_pipeline_5 (Bash command failed. The command returned a non-zero exit code 1.; 2289)
[2026-06-03T13:03:11.549+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:03:11.562+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:03:11.564+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
